3822B1FI1/1_gelu_omp/baranov_aleksey/log.txt
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp: In function ‘AlignedVector GeluOMP(const AlignedVector&)’:
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp:13:22: error: expected ‘;’ before ‘,’ token
   13 |     for (size_t i = 0, sz= input.size(); i !=sz ; ++i) {
      |                      ^
      |                      ;
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp:13:22: error: expected primary-expression before ‘,’ token
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp:13:46: error: ‘sz’ was not declared in this scope
   13 |     for (size_t i = 0, sz= input.size(); i !=sz ; ++i) {
      |                                              ^~
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp:13:48: error: expected ‘)’ before ‘;’ token
   13 |     for (size_t i = 0, sz= input.size(); i !=sz ; ++i) {
      |         ~                                      ^~
      |                                                )
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp:13:5: error: invalid controlling predicate
   13 |     for (size_t i = 0, sz= input.size(); i !=sz ; ++i) {
      |     ^~~
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp:13:5: error: invalid increment expression
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/1_gelu_omp/baranov_aleksey/gelu_omp.cpp:13:53: error: ‘i’ was not declared in this scope
   13 |     for (size_t i = 0, sz= input.size(); i !=sz ; ++i) {
      |                                                     ^
